--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -176,7 +176,7 @@ components:
       properties:
         photo_id:
           $ref: "#/components/schemas/SHA256hash"
-        author_identifier:
+        author_name:
           $ref: "#/components/schemas/Username"
         description:
           type: string
@@ -376,7 +376,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/IDList"
+                $ref: "#/components/schemas/Stream"
         "404":
           description: |-
             The user does not exist
